# QuentlamEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CleanupReport.md  QuentlamEngine.sln  README.md  all_objects.txt  git_size.txt  premake5.lua
CrashDumps/: Crash_20260417_182335.dmp  Crash_20260417_182335.json
OutlineSolution/: README.md
OutlineSolution/Reports/: ArtAcceptanceList.md  PerformanceBenchmark.md
OutlineSolution/Tests/: OutlineStabilityTests.md
OutlineSolution/Unity/: SobelOutline.shader  SobelOutlineFeature.cs
OutlineSolution/Unreal/: PostProcess_Outline.md
ParkourGame/src/: GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  ParticleSystem.cpp  Pillar.h  Player.cpp  Player.h  SandboxApp.cpp
QL-Editor/: imgui.ini
QL-Editor/src/: EditorLayer.cpp  EditorLayer.h  EditorToolbarLayout.h  QLEditorApp.cpp
QuentlamEngine/: QuentlamEngine.vcxproj  QuentlamEngine.vcxproj.filters
QuentlamEngine/src/: Quentlam.h  qlpch.cpp  qlpch.h
Sandbox/: SandBox.vcxproj  imgui.ini
Sandbox/src/: Color.h  GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  ParticleSystem.h  Pillar.h  Player.cpp  Player.h  Random.h  Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h  SandboxApp.cpp
Tests/: Tests.vcxproj  修复说明.md
Tests/src/: Player.cpp  Player.h  PrefabManager.h  RegressionTests.cpp  SATCollisionTests.cpp
docs/: CrashReporter.md
script/: BootstrapProject.ps1  GenerateProject.bat
tools/: crash_server.ps1  grafana_dashboard.json  model_scanner.ps1  model_scanner.py  parse_dump.py  play-button-regression.ps1  run_crash_tests.ps1  stress.cpp
(+129 files in other folders)
